[package]
name = "radio_ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "radio_ml"
crate-type = ["rlib"]  # "cdylib"

[dependencies]
hdf5 = "0.8.1"
ndarray = "0.15.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
ndarray-rand = "0.14.0"
rand_core = "0.6.4"
rayon = "1.6.1"

# [dependencies.pyo3]
# version = "0.18.0"
# features = ["extension-module"]

[dependencies.clam]
git = "https://github.com/URI-ABD/clam.git"
branch = "rust"
